i18n/es/docusaurus-plugin-content-docs-ap/version-2.9/admin-guide/sep31/integration.mdx
---
title: Integración
sidebar_position: 30
---

import { CodeExample } from "@site/src/components/CodeExample";

Integrar con la Anchor Platform para facilitar pagos transnacionales implica implementar lo siguiente, como mínimo:

- [`GET /customer`][get-customer] & [`PUT /customer`][put-customer] puntos finales de la API KYC para solicitar y recopilar datos KYC de los clientes
- [`GET /rate`][get-rate] punto final de la API RFQ para proporcionar tasas de cambio entre los activos on-chain y off-chain admitidos
- `GET /transactions` solicitudes para obtener actualizaciones sobre el estado de las transacciones de la Anchor Platform (documentación próximamente)
- [`JSON-RPC`][json-rpc-methods] solicitudes para actualizar el estado de las transacciones de la Anchor Platform

Lo siguiente también puede ser necesario dependiendo de tu caso de uso:

- [`GET /fee`][get-fee] si tu negocio quiere ofrecer a los remitentes la opción de omitir el paso de creación de cotización
- [`GET /unique_address`][get-unique-address] si tu negocio utiliza un servicio de custodia para activos on-chain
- [`DELETE /customer`][delete-customer] si tu negocio quiere o está obligado a permitir que los remitentes soliciten la eliminación de los datos del cliente

## Crear un servidor de negocios

Primero, vamos a crear un servidor de negocios y agregarlo a nuestro archivo docker compose.

<CodeExample>

```yaml
version: "3.8"

services:
  sep-server:
    image: stellar/anchor-platform:2.9.0
    command: --sep-server
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
    ports:
      - "8080:8080"
    depends_on:
      - db
  platform-server:
    image: stellar/anchor-platform:2.9.0
    command: --platform-server
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
    ports:
      - "8085:8085"
    depends_on:
      - db

  server:
    build: .
    ports:
      - "8081:8081"
    env_file:
      - ./dev.env
  db:
    image: postgres:14
    ports:
      - "5432:5432"
    env_file:
      - ./dev.env
```

</CodeExample>

A continuación, crea un servidor web simple usando tu lenguaje de programación preferido y un `Dockerfile` que inicie el servidor. `docker compose up` debería iniciar exitosamente los tres servicios.

Esta guía no proporciona una implementación de ejemplo de los puntos finales, pero puedes encontrar más información sobre los esquemas de solicitud y respuesta en la [Referencia de la API de Anchor Platform][ap-api], y las secciones a continuación expandirán sobre conceptos importantes a entender al implementar los puntos finales.

## Puntos finales de callback del cliente

La Anchor Platform nunca almacena la PII de tus clientes, y en su lugar actúa como un servidor proxy entre las aplicaciones clientes y tu negocio, reenvíando solicitudes y respuestas a la otra parte. Actualmente, las solicitudes y respuestas son casi idénticas a las definidas en la [especificación de la API KYC SEP-12][sep12].

### Identificar clientes

Los clientes pueden ser identificados usando dos enfoques.

El primer enfoque utiliza una cuenta Stellar y un memo. Al usar la Anchor Platform para facilitar pagos transnacionales, la organización remitente usa su propia cuenta Stellar, la que se utiliza para autenticar a través de [SEP-10 Stellar Authentication][ap-sep10], al registrar a los clientes con tu negocio. Los memos se utilizan para distinguir a clientes únicos que provienen de la misma organización remitente.

El segundo enfoque utiliza los ID de los clientes generados por tu servicio. Por ejemplo, si una organización remitente está registrando un cliente, tu negocio recibirá una solicitud `PUT /customer` como la siguiente:

<CodeExample>

```json
{
  "account": "GDJUOFZGW5WYBK4GIETCSSM6MTTIJ4SUMCQITPTLUWMQ6B4UIX2IEX47",
  "memo": "780284017",
  "type": "sep31-sender",
  "first_name": "John",
  "last_name": "Doe",
  "email": "johndoe@example.com"
}
```

</CodeExample>

En este ejemplo, la clave pública `GDJ...X47` identifica la organización remitente, y el memo `780284017` identifica al cliente. Los memos son generalmente enteros de 64 bits, pero también pueden ser otros tipos de datos, por lo que deben guardarse como cadenas. En respuesta, tu negocio deberá retornar un ID de cliente.

<CodeExample>

```json
{
  "id": "fb5ddc93-1d5d-490d-ba5f-2c361cea41f7"
}
```

</CodeExample>

Tu servidor de negocios puede usar cualquier identificador para clientes siempre que sea una cadena.

Luego del registro de un cliente, la organización remitente puede usar cualquiera de los dos enfoques al verificar el estado del cliente. Por ejemplo, puedes recibir una solicitud `GET /customer` como la siguiente:

<CodeExample>

```
/customer?account=GDJUOFZGW5WYBK4GIETCSSM6MTTIJ4SUMCQITPTLUWMQ6B4UIX2IEX47&memo=780284017&type=sep31-sender
```

</CodeExample>

O, la organización remitente podría usar el identificador que devolviste cuando registraron originalmente al cliente.

<CodeExample>

```
/customer?id=fb5ddc93-1d5d-490d-ba5f-2c361cea41f7&type=sep31-sender
```

</CodeExample>

Tu negocio deberá mantener un mapeo entre la cuenta y el memo utilizados para registrar originalmente al cliente y el ID que devuelves en la respuesta, así como los datos KYC proporcionados. En futuras iteraciones de la Anchor Platform, podríamos mantener este mapeo para tu negocio para que solo tengas que trabajar con los IDs que generas.

### Tipos de clientes

Tu negocio probablemente requiere diferentes conjuntos de información KYC dependiendo del tipo de cliente. Puedes definir las etiquetas para cada uno de estos tipos de clientes en tu archivo `dev.assets.yaml`, y tus organizaciones remitentes deberán entender qué etiqueta usar al registrar o consultar el estado de los clientes.

En las solicitudes `PUT /customer`, debes usar el tipo pasado para evaluar si el remitente ha proporcionado todos los campos requeridos. En las solicitudes `GET /customer`, debes usar el tipo para determinar el estado del cliente.

### Probar con la billetera de demostración

Puedes probar tu implementación con la [Billetera de Demostración Stellar][demo-wallet] siguiendo los pasos a continuación.

1. Selecciona "Generar keypair para nueva cuenta"
2. Selecciona "Crear cuenta"
3. Selecciona "Agregar activo" e introduce el código del activo y el dominio principal de la Anchor Platform, `localhost:8080`
4. Selecciona "Agregar línea de confianza"
5. Financia tu cuenta con un saldo del activo
6. Selecciona "SEP-31 Enviar" en el menú desplegable

Deberías ver que la billetera de demostración encuentra las URL de tu servicio, autentica y comprueba qué campos KYC necesita recopilar. Luego debería presentar un formulario para que introduzcas los detalles KYC para el remitente y el receptor.

[![billetera de demostración después de iniciar una transacción](../../assets/anchor-platform-sep31-demo-wallet-widget.png)](../../assets/anchor-platform-sep31-demo-wallet-widget.png)

Una vez que hayas ingresado la información solicitada, enviará esa información a la Anchor Platform, que la enviará a tu servidor de negocios. Una vez que la billetera de demostración tenga los ID de los clientes que generaste, iniciará una transacción que debería fallar.

## Punto final de callback de tarifas

Una vez que la organización remitente ha registrado a los clientes involucrados en la transacción, deberá solicitar una cotización, o tasa de cambio, a tu negocio. La Anchor Platform solicita esta información a tu servidor de negocios utilizando el [`GET /rate` endpoint][get-rate].

### Cotizaciones firmes vs. indicativas

Las solicitudes de cotizaciones tendrán un parámetro `type` que es [`indicative`][indicative] o [`firm`][firm]. Si `type=firm`, tu respuesta debe incluir el campo `id` y `expires_at` y reservar la liquidez necesaria para cumplir con esta cotización hasta que la cotización caduque. Si `type=indicative`, no devuelvas los campos `id` o `expires_at` porque la tasa proporcionada no se utilizará en una transacción.

Ten en cuenta que el cliente puede solicitar que la cotización caduque después de una fecha-hora específica utilizando el parámetro `expires_after`. Tu negocio debe honrar esta solicitud devolviendo un valor `expires_at` que esté en o después de la fecha-hora solicitada o rechazar la solicitud con una respuesta 400 Bad Request, que será reenviada al cliente.

### Usando el ID del cliente

Las solicitudes pueden incluir un parámetro `client_id` que identifica a la organización remitente que solicita la tasa. Puedes usar este parámetro para adherirte a los términos comerciales acordados con esa organización remitente, como ofrecer tarifas con descuento. `client_id` puede no estar presente para solicitudes indicativas, en cuyo caso deberías devolver tu precio de mercado. Actualmente `client_id` siempre será la clave pública Stellar que la organización remitente utilizó para autenticar con la Anchor Platform.

### Métodos de entrega

Es común que las tarifas y cargos de las empresas difieran dependiendo de los rails de pago utilizados para enviar fondos al destinatario. Si tus métodos de entrega están configurados en tu archivo `asset.yaml`, los clientes siempre proporcionarán el rail de pago que desean que tu negocio use para solicitudes de cotización firmes.

Dado que este punto final actualmente solo se utiliza para pagar remesas en activos off-chain, se utilizará `buy_delivery_method`. Si este punto final se usa en otros flujos de transacción como depósitos SEP-24, entonces `sell_delivery_method` también puede ser pasado para negocios que soporten estos tipos de transacciones.

## Obteniendo actualizaciones de estado de transacción

Para facilitar pagos transnacionales, deberás ser capaz de detectar cuándo una organización remitente ha enviado a tu negocio un pago on-chain y determinar qué transacción estaba destinado a cumplir.

La forma más fácil de hacerlo es ejecutar el Stellar Observer, que detectará estos pagos y actualizará el registro de transacciones correspondiente con información sobre el pago. Tu negocio puede detectar estas actualizaciones consultando el punto final de la API de la Plataforma `GET /transactions`.

### Ejecutando el Stellar Observer

El Stellar Observer monitorea el ledger Stellar para pagos realizados a tu(s) cuenta(s) y actualiza los registros de transacciones correspondientes con información sobre pagos on-chain. Para ejecutar el observador, agrega lo siguiente a tu archivo docker compose.

<CodeExample>

```yaml
services:
  ...
  observer:
    image: stellar/anchor-platform:2.9.0
    command: --stellar-observer
    env_file:
      - ./dev.env
    volumes:
      - ./config:/home
```

</CodeExample>

### Consultando los pagos recibidos

El Stellar Observer realiza solicitudes JSON-RPC a la API de la Plataforma cada vez que detecta pagos recibidos para transacciones iniciadas por organizaciones remitentes, actualizando así la fecha-hora `transfer_received_at` de la transacción.

Tu negocio debería consultar periódicamente el punto final de la API de la Plataforma `GET /transactions` para detectar estas actualizaciones. Puedes consultar el siguiente ejemplo:

<CodeExample>

```bash
curl http://localhost:8080/transactions?sep=31&order_by=transfer_received_at&order=desc
```

</CodeExample>

La respuesta incluirá una lista de transacciones de pago transnacional iniciadas por organizaciones remitentes. Esta lista estará ordenada según la hora en que se recibió un pago para esa transacción. Para cada transacción devuelta, tu negocio debe verificar si ya ha detectado el pago para esa transacción. Si es así, has detectado todos los pagos realizados a tu(s) cuenta(s).

## Actualizando la transacción a través de JSON-RPC

El diagrama de flujo SEP-31 define la secuencia/reglas de transición del estado de la transacción y un conjunto de métodos JSON-RPC que deben ser llamados para cambiar ese estado. No puedes definir el estado que deseas establecer para una transacción específica en tus solicitudes. Cada método JSON-RPC define las estructuras de datos que espera en la solicitud. Si la solicitud no contiene los atributos requeridos, la Anchor Platform devolverá un error y no cambiará el estado de la transacción.

[![flujo sep31](../../assets/sep31-transition-diagram.png)](../../assets/sep31-transition-diagram.png)

:::tip

Los estados en <span style={{color: "green"}}>verde</span> son obligatorios y definen el flujo más corto.

Los estados en <span style={{color: "#B0BF1A"}}>amarillo</span> son opcionales y pueden omitirse.

Los estados en <span style={{color: "red"}}>rojo</span> significan que la transacción está en un estado de error o ha caducado.

:::

Puedes crear una [plantilla][sep24-integration-make-json-rpc-request] para hacer solicitudes JSON-RPC a la Anchor Platform.

Este capítulo también contiene información sobre el formato de [solicitud][sep24-integration-rpc-request]/[respuesta][sep24-integration-rpc-response] y [códigos de error][sep24-integration-error-codes] que podrían ser devueltos por la Anchor Platform.

### Listo para recibir fondos

Las transacciones SEP-31 deberían inicialmente estar en el estado `pending_sender`. El Anchor receptor espera recibir el pago identificado por el stellar_memo incluido en la respuesta POST /transactions.

Una vez que tu negocio detecta que ha recibido un pago on-chain para una transacción específica, debe actualizar el estado de la transacción.

<CodeExample>

```json
// onchain-funds-received.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_onchain_funds_received",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Onchain funds received",
      "stellar_transaction_id": "7...9",
      "amount_in": {
        "amount": 10
      },
      "amount_out": {
        "amount": 9
      },
      "amount_fee": {
        "amount": 1
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh onchain-funds-received.json
```

</CodeExample>

El estado de la transacción cambiará a `pending_receiver`.

### Fondos offchain enviados

Para completar la transacción y cambiar su estado a `completed`, necesitas hacer una solicitud JSON-RPC `notify_offchain_funds_sent`.

<CodeExample>

```json
// offchain-funds-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds sent",
      "funds_sent_at": "2023-07-04T12:34:56Z",
      "external_transaction_id": "a...c"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-sent.json
```

</CodeExample>

### Fondos offchain pendientes

Otra opción es mover el estado de la transacción a `pending_external`. Este estado significa que el pago ha sido enviado a la red externa, pero no ha sido confirmado aún.

<CodeExample>

```json
// offchain-funds-pending.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_pending",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds pending",
      "external_transaction_id": "a...c"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-pending.json
```

</CodeExample>

### Verificando la información del cliente

En algunos casos, el Anchor receptor podría necesitar solicitar información actualizada del Anchor remitente. Por ejemplo, el banco le dice al Anchor receptor que el nombre del cliente receptor proporcionado es incorrecto o le falta un segundo nombre. Dado que esta información fue enviada a través de SEP-12, la transacción debería entrar en el estado `pending_customer_info_update` hasta que el Anchor remitente haga otra solicitud SEP-12 `PUT /customer` para actualizar. El Anchor remitente puede verificar qué campos necesitan ser actualizados haciendo una solicitud SEP-12 `GET /customer` incluyendo los parámetros id o cuenta y memo. El Anchor receptor debería responder con un estado `NEEDS_INFO` y `last_name` incluido en los campos descritos.

Después de que el Anchor remitente haga una solicitud SEP-12 `PUT /customer`, llama al método JSON-RPC `notify_customer_info_updated` otra vez para actualizar el estado de la transacción. Adicionalmente, llama a este método cada vez que cambie el estado SEP-12 de un cliente, como cuando la información del cliente está siendo validada y el estado cambia de `NEEDS_INFO` a `PROCESSING`. Esto asegura que cualquier cliente configurado con una URL de callback sea notificado del último estado del cliente, permitiendo que el cliente le pida al usuario que actualice su información.

<CodeExample>

```json
// notify-customer-info-updated.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_customer_info_updated",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Customer info updated",
      "customer_id": "45f8884d-d6e1-477f-a680-503179263359",
      "customer_type": "sep31-receiver" // or sep31-sender
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh notify-customer-info-updated.json
```

</CodeExample>

### Hacer reembolso Stellar

La integración con el servicio de custodia te permite hacer reembolsos a través del servicio de custodia, como Fireblocks.

<CodeExample>

```json
// do-stellar-refund.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "do_stellar_refund",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Do stellar refund",
      "refund": {
        "amount": {
          "amount": 9,
          "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
        },
        "amount_fee": {
          "amount": 1,
          "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
        }
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh do-stellar-refund.json
```

</CodeExample>

:::note

No puedes hacer múltiples reembolsos en el flujo SEP-31. Por esta razón, el monto total del reembolso más la tarifa debería ser igual a `amount_in`. De lo contrario, obtendrás un error.

:::

### Reembolso enviado

Hay una posibilidad de enviar todos los fondos de vuelta al `Anchor remitente` (reembolso). Necesitas reembolsar la suma total (reembolso completo).

<CodeExample>

```json
// refund-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_refund_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Refund sent",
      "refund": {
        "id": "1c186184-09ee-486c-82a6-aa7a0ab1119c",
        "amount": {
          "amount": 10,
          "asset": "iso4217:USD"
        },
        "amount_fee": {
          "amount": 1,
          "asset": "iso4217:USD"
        }
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh refund-sent.json
```

</CodeExample>

:::note

No puedes hacer múltiples reembolsos en el flujo SEP-31. Por esta razón, el monto a reembolsar más la tarifa debería ser igual a `amount_in`. De lo contrario, obtendrás un error.

:::

### Error de transacción

Si encuentras un error irrecuperable al procesar la transacción, se requiere establecer el estado de la transacción a `error`. Puedes usar el campo de mensaje para describir los detalles del error.

<CodeExample>

```json
// transaction-error.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_error",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Error occurred"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-error.json
```

</CodeExample>

:::tip

Si un usuario ha realizado una transferencia, debes hacer una recuperación de la transacción, y luego puedes reintentar procesar la transacción o iniciar un reembolso.

:::

### Transacción Caducada

Tu negocio puede querer caducar aquellas transacciones que han sido abandonadas por el usuario después de algún tiempo. Es una buena práctica limpiar las transacciones inactivas que están en estado `incompleto`. Para hacerlo, simplemente cambia el estado de la transacción a `caducado`.

<CodeExample>

```json
// transaction-expired.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_expired",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Transaction expired"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-expired.json
```

</CodeExample>

:::tip

Este método JSON-RPC no se puede usar después de que el usuario ha realizado una transferencia.

:::

### Recuperación de Transacciones

El estado de la transacción se puede cambiar de `error/expired` a `pending-anchor`. Después de la recuperación, puedes reembolsar los activos recibidos o proceder con el procesamiento de la transacción. Para recuperar la transacción, es necesario realizar la siguiente solicitud JSON-RPC:

<CodeExample>

```json
// transaction-recovery.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_recovery",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Transaction recovered"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-recovery.json
```

</CodeExample>

## Punto Final de Callback de Tarifa

Tu negocio puede querer ofrecer a las organizaciones remitentes la opción de omitir el proceso de creación de cotizaciones, permitiendo que tu negocio use una tarifa determinada en el momento en que los fondos se entregan al destinatario. En este caso, la Anchor Platform no realizará una solicitud `GET /rate`, pero aún necesitarás proporcionar la tarifa que tu negocio cobrará por estos tipos de transacciones usando el endpoint [`GET /fee`][get-fee].

### Configuración

Puedes habilitar estos tipos de transacciones actualizando la configuración de tu archivo `assets.yaml`:

<CodeExample>

```yaml
assets:
  - ...
    sep31:
      quotes_required: false
```

</CodeExample>

## Punto Final de Callback de Dirección Única

Las empresas deben proporcionar una cuenta Stellar única y un par de notas para cada transacción solicitada por las organizaciones remitentes para que la Anchor Platform pueda identificar y mapear el pago on-chain enviado para la transacción específica. La Anchor Platform puede generar estos pares de cuenta y notas por sí misma, pero la mayoría de las empresas utilizan un servicio de custodia para recibir pagos on-chain. En este caso, el negocio debe solicitar al custodio que genere la cuenta Stellar y la nota. Esto se hace utilizando el endpoint [`GET /unique_address`][get-unique-address].

### Configuración

Para configurar la Anchor Platform para hacer estas solicitudes, agrega lo siguiente a tu configuración:

<CodeExample>

```bash
# dev.env
SEP31_DEPOSIT_INFO_GENERATOR_TYPE=api
```

</CodeExample>

:::caution

Este endpoint puede ser eliminado durante futuras actualizaciones de versión principales de la Anchor Platform, cuando se agregue soporte para conectar con servicios de custodia y generar estas direcciones automáticamente.

:::

[ap-api]: ../../README.mdx
[ap-sep10]: ../sep10/README.mdx
[sep12]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0012.md
[demo-wallet]: https://demo-wallet.stellar.org
[indicative]: https://www.investopedia.com/terms/i/indicativequote.asp
[firm]: https://www.investopedia.com/terms/f/firmquote.asp
[get-unique-address]: ../../api-reference/callbacks/gen-address.api.mdx
[get-customer]: ../../api-reference/callbacks/get-customer.api.mdx
[put-customer]: ../../api-reference/callbacks/put-customer.api.mdx
[get-rate]: ../../api-reference/callbacks/get-rates.api.mdx
[get-fee]: ../../api-reference/callbacks/get-fee.api.mdx
[put-customer-callback]: ../../api-reference/callbacks/put-customer.api.mdx
[delete-customer]: ../../api-reference/callbacks/del-customer.api.mdx
[json-rpc-methods]: ../../api-reference/platform/rpc/methods/README.mdx
[sep24-integration-make-json-rpc-request]: ../sep24/integration.mdx#making-json-rpc-requests
[sep24-integration-rpc-request]: ../sep24/integration.mdx#json-rpc-request
[sep24-integration-rpc-response]: ../sep24/integration.mdx#json-rpc-response
[sep24-integration-error-codes]: ../sep24/integration.mdx#error-codes
